README & setup documentation improvements